# mcp-writing-library

./: .dockerignore  .env.example  .gitignore  .pair-programming-session.md  .project-structure.md  .todos-report.md  =5.9.0  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.jobs/completed/: 350ffda6-3639-4bd7-bd86-167ce6b70ec6.json
.superpowers/brainstorm/61513-1777001348/state/: server-stopped
data/patterns/: config.json  connectors_en.json  connectors_pt.json  discursive_expressions.json  discursive_targets.json  generic_closings.json  grandiose_openers_en.json  grandiose_openers_pt.json  hedging_targets.json  hedging_words_en.json  hedging_words_pt.json  hollow_intensifiers.json  juridiques_terms.json  nominalisation_suffixes.json  para_limits.json  passive_patterns.json  pt_function_words.json  pt_passive_patterns.json
docs/: phase-5a-tool-surface-proposal.md
docs/superpowers/plans/: 2026-03-15-mcp-writing-library.md  2026-04-03-vocabulary-intelligence-layer.md  2026-04-04-token-to-tenant-mapping.md
scripts/: fix_style_profiles_indexes.py  seed_creative_templates.py  seed_creative_thesaurus.py  seed_fiction_rubrics.py  seed_from_markdown.py  seed_hedging_thesaurus.py  seed_patterns.py  seed_poetry_rubrics.py  seed_rubrics.py  seed_song_rubrics.py  seed_templates.py  seed_thesaurus.py  setup_collections.py
scripts/data/: thesaurus_wordlist.py
sentry-triage/: 2026-04-23-triage.md  2026-04-25-triage.md
src/: sentry.py  server.py
src/models/: __init__.py  responses.py
src/sessions/: models.py  store.py
src/tools/: ai_patterns.py  collections.py  consistency.py  contributions.py  evidence.py  export.py  fiction_patterns.py  passages.py  pattern_store.py  plagiarism.py  poetry_patterns.py  pt_forensic.py  qdrant_errors.py  registry.py  review.py  rubrics.py  song_patterns.py  style_profiles.py  styles.py  templates.py  terms.py  thesaurus.py
tests/: conftest.py  test_ai_patterns.py  test_collections.py  test_consistency.py  test_evidence.py  test_export.py  test_passages.py  test_pattern_store.py  test_phase1_surface.py  test_plagiarism.py  test_pt_forensic.py  test_qdrant_errors.py  test_rubrics.py  test_style_profiles.py  test_styles.py  test_templates.py  test_terms.py  test_thesaurus.py  test_transport.py
