[project]
name = "mcp-writing-library"
version = "1.0.0"
description = "MCP server for writing passages and terminology dictionary with hybrid semantic search"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Danilo da Silva" }
]

dependencies = [
    # kbase-core is vendored in vendor/kbase/ — added to sys.path in main.py
    "mcp>=1.13.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "structlog>=24.0.0",
    "uvicorn>=0.27.0",
    # kbase-core runtime dependencies
    "qdrant-client>=1.15.1",
    "openai>=1.12.0",
    "tiktoken>=0.5.2",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
